--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+.box {
+    width: 300px; /* Width of the box */
+    background-color: lightblue; /* Background color */
+    border: 15px solid blue; /* Border */
+    padding: 50px; /* Padding inside the box */
+    margin: 20px; /* Margin around the box */
+    box-sizing: border-box; /* Include padding and border in width/height */
+    text-align: center; /* Center text */
+}
